<resources>
    <string name="app_name">NoticeBoard</string>
    <!--Меню -->
    <string name="update_avatar">Обновить аватар</string>
    <string name="my_all_ads">Объявления</string>
    <string name="my_ads">Мои объявления</string>
    <string name="all_ads">Все объявления</string>
    <string name="my_long_ads">С длительной арендой</string>
    <string name="my_days_ads">С посуточной арендой</string>
    <string name="my_communication">Общение</string>
    <string name="my_chat">Чаты</string>
    <string name="my_calendar">Календарь встреч</string>
    <string name="my_account">Аккаунт</string>
    <string name="my_profile">Профиль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <!--Регистрация/Авторизация -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Имя</string>
    <string name="telephone_hint">Телефон</string>
    <string name="password_profile">Пароль</string>
    <string name="sign_up_btn">Зарегистрироваться</string>
    <string name="sign_in_btn">Войти</string>
    <string name="forget_pass_btn">Забыли пароль?</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_in_title">Авторизация</string>
    <string name="sign_in_or_sign_up">Войдите или зарегистрируйтесь!</string>
    <!--Создание объявлений(EditActivity) -->
    <string name="edit_act_title">Название</string>
    <string name="edit_act_price">Цена</string>
    <string name="edit_act_address">Адрес</string>
    <string name="edit_act_discription">Описание</string>
    <string name="edit_act_view_on_map">Показать на карте</string>
    <string name="edit_act_cat_title">Категория</string>
    <string-array name="edit_act_type">
        <!--<item>Выберите тип аренды</item>-->
        <item>Посуточная аренда</item>
        <item>Аренда на длительный срок</item>
    </string-array>
    <string name="toogle_open">Open</string>
    <string name="toogle_close">Close</string>
    <!--(Main Activity) -->
    <string name="delete_title">Удалить объявление?</string>
    <string name="delete_message">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <!--Просмотр объявлений-->
    <string name="chat_btn">Написать</string>
    <string name="call_btn">Позвонить</string>
    <!--Просмотр объявлений-->
    <string name="chat_select_dialog">Выберите диалог</string>
    <string name="chat_input_message">Введите сообщение</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Фильтры -->
    <string name="filters">Выберите фильтры</string>
    <string name="filters_cd_city">По городу</string>
    <string name="filters_input_city">Город</string>
    <string name="filters_input_from">От</string>
    <string name="filters_input_to">До</string>
    <string name="filters_btn_save">Применить</string>
    <string name="filters_cd_price">По цене</string>
    <string name="filters_cd_cat">По категории</string>
</resources>