<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
    </group>

    <item android:id="@+id/adsCat"
        android:title="@string/my_all_ads">
        <menu>
            <item
                android:id = "@+id/id_all_ads"
                android:title="@string/all_ads"
                />
            <item
                android:id="@+id/id_my_ads"
                android:title="@string/my_ads" />
        </menu>
    </item>

    <item android:id="@+id/chatCat"
        android:title="@string/my_communication">
        <menu>
            <item
                android:id="@+id/id_my_chat"
                android:title="@string/my_chat" />
<!--            <item-->
<!--                android:id="@+id/id_my_calendar"-->
<!--                android:title="@string/my_calendar" />-->
        </menu>
    </item>
    <item android:id="@+id/accountCat"
        android:title="@string/my_account">
        <menu>
            <item android:id="@+id/id_settings"
                android:title="@string/my_profile"/>
            <item
                android:id="@+id/id_sign_up"
                android:title="@string/sign_up"
                android:visible="true" />
            <item
                android:id="@+id/id_sign_in"
                android:title="@string/sign_in"
                android:visible="true" />
            <item
                android:id="@+id/id_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>