<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/edit_act_title"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/imItem" />

    <ImageView
        android:id="@+id/imItem"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClickImage"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/edit_act_price"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/spType"
        app:layout_constraintStart_toStartOf="@+id/spType"
        app:layout_constraintTop_toBottomOf="@+id/spType" />

    <EditText
        android:id="@+id/edAddress"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/edit_act_address"
        android:inputType="textPostalAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <EditText
        android:id="@+id/edDiscription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_act_discription"
        android:inputType="textMultiLine|textPersonName"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edAddress"
        app:layout_constraintTop_toBottomOf="@+id/edPrice"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:contextClickable="false"
        app:layout_constraintEnd_toEndOf="@+id/edAddress"
        app:layout_constraintStart_toStartOf="@+id/edAddress"
        app:layout_constraintTop_toBottomOf="@+id/edAddress" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickSavePost"
        android:src="@drawable/ic_save"
        android:tint="@color/white"
        app:backgroundTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@+id/edDiscription"
        app:layout_constraintEnd_toEndOf="@+id/edDiscription"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>