<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.core.widget.NestedScrollView-->
<!--    android:id="@+id/scrollLayout"-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:scrollbars="vertical">-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:layout_constraintBottom_toBottomOf="@+id/scrollLayout"
    tools:context=".ShowLayoutActivityActivity">

    <LinearLayout
        android:id="@+id/linearLayoutAdress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/tvShowTitle">

        <TextView
            android:id="@+id/tvAddressDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="8"
            android:background="@android:drawable/editbox_dropdown_light_frame"

            android:drawableStart="@drawable/ic_address"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />

        <TextView
            android:id="@+id/tvShowAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvViewOnMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_medium_italic"
        android:paddingStart="8dp"
        android:text="@string/edit_act_view_on_map"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAdress" />

    <LinearLayout
        android:id="@+id/linearLayoutPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/tvViewOnMap">

        <TextView
            android:id="@+id/tvPriceDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="@string/edit_act_price"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />

        <TextView
            android:id="@+id/tvShowPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPrice">

        <TextView
            android:id="@+id/tvCatDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="@string/edit_act_cat_title"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />

        <TextView
            android:id="@+id/tvShowCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="@font/montserrat_medium"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imMain"
            app:layout_constraintStart_toStartOf="@+id/imMain"
            app:layout_constraintTop_toBottomOf="@+id/imMain" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvShowTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="TextView"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/imMain" />

    <ImageView
        android:id="@+id/imMain"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvShowDisc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/montserrat_medium"
        android:padding="10dp"
        android:text="@string/edit_act_discription"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCat" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/chatBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/chat_btn" />

        <Button
            android:id="@+id/callBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/custom_call_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/call_btn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imMain"
        app:layout_constraintStart_toStartOf="@+id/imMain"
        app:layout_constraintTop_toBottomOf="@+id/tvShowDisc">

        <androidx.cardview.widget.CardView
            android:id="@+id/userAvatarAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imUserAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_weight="2"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:text="TextView"
                android:textColor="@color/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingEnd="4dp"
                    android:text="@string/email_hint"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/tvEmailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="4dp"
                    android:text="TextView"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUserTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingEnd="4dp"
                    android:text="@string/telephone_hint"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/tvTelephoneValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="4dp"
                    android:text="TextView"
                    android:textColor="@color/text_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--</androidx.core.widget.NestedScrollView>-->
